Updated TypeScript d.ts file generation, fixing several issues including handling polymorphic types correctly, no longer using "default" in ServiceClient TypeScript export, defining autorest callback as a separate type, and adding a few extra types to ms-rest/lib/index.d.ts

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodGroupIndexTemplateTS.cshtml
@@ -7,10 +7,26 @@
 @Header(" * ")
 */
 @EmptyLine
-import { RequestOptions, WebResource } from "ms-rest";
-import * as stream from "stream";
+import { ServiceClientOptions, RequestOptions, ServiceCallback } from 'ms-rest';
+@foreach (var methodGroup in Model.MethodGroupModels)
+{
+@if (methodGroup.ContainsTimeSpan)
+{
+@:import * as moment from 'moment';
+break;
+}
+}
+@foreach (var methodGroup in Model.MethodGroupModels)
+{
+@if (methodGroup.ContainsStream)
+{
+@:import * as stream from 'stream';
+break;
+}
+}
+
 @if (Model.ModelTypes.Any()) {
-@:import * as models from "../models";
+@:import * as models from '../models';
 }
 @EmptyLine
 @foreach (var methodGroup in Model.MethodGroupModels) {
