LRO PUT tests pass

--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
@@ -24,6 +24,7 @@ import com.microsoft.rest.ServiceResponseEmptyCallback;
 import com.squareup.okhttp.ResponseBody;
 import retrofit.Retrofit;
 import retrofit.Call;
+import retrofit.Callback;
 import retrofit.Response;
 import java.io.IOException;
 @foreach (var importClass in Model.ImplImports)
