--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
@@ -37,7 +37,7 @@ else
  */
 public ServiceResponse<@Model.GenericReturnTypeString> @(Model.Name)(@Model.MethodParameterDeclaration) throws @Model.Exceptions {
     Response<ResponseBody> result = service.@(Model.Name)(@Model.MethodParameterInvocation).execute();
-    return client.getAzureClient().getPutOrPatchResult(result, new TypeToken<@Model.GenericReturnTypeString>() {}.getType());
+    return client.getAzureClient().@(Model.PollingMethod)(result, new TypeToken<@Model.GenericReturnTypeString>() {}.getType());
 }
 @EmptyLine
 /**
@@ -75,7 +75,7 @@ public Call<@Model.CallType> @(Model.Name)Async(@Model.MethodParameterDeclaratio
 
         @@Override
         public void onResponse(Response<ResponseBody> response, Retrofit retrofit) {
-            client.getAzureClient().getPutOrPatchResultAsync(response, serviceCallback);
+            client.getAzureClient().@(Model.PollingMethod)Async(response, serviceCallback);
         }
     });
     return call;
