--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientTemplate.cshtml
@@ -113,7 +113,7 @@ namespace @Settings.Namespace
             {
                 throw new ArgumentNullException("baseUri");
             }
-            this.Initialize();
+
             this.BaseUri = baseUri;
         }
         @EmptyLine
@@ -145,8 +145,15 @@ namespace @Settings.Namespace
         foreach (var param in parameters)
         {
         @:    this.@(param.Name) = @(param.Name.ToCamelCase());
+            @if ("Credentials".Equals(param.Name, StringComparison.OrdinalIgnoreCase) &&
+            "ServiceClientCredentials".Equals(param.Type.Name, StringComparison.OrdinalIgnoreCase))
+            {
+            @:if (this.Credentials != null)
+            @:{
+            @:    this.Credentials.InitializeServiceClient(this);
+            @:}
+            }
         }
-        @:    this.Initialize();
         @:}
         @:@EmptyLine
 
@@ -182,7 +189,16 @@ namespace @Settings.Namespace
         foreach (var param in parameters)
         {
         @:    this.@(param.Name) = @(param.Name.ToCamelCase());
-        }
+
+            @if ("Credentials".Equals(param.Name, StringComparison.OrdinalIgnoreCase) &&
+            "ServiceClientCredentials".Equals(param.Type.Name, StringComparison.OrdinalIgnoreCase))
+            {
+                @:if (this.Credentials != null)
+                @:{
+                @:    this.Credentials.InitializeServiceClient(this);
+                @:}
+            }
+    }
         @:}
         @:@EmptyLine
         }
@@ -202,14 +218,6 @@ namespace @Settings.Namespace
             @:this.@(property.Name) = @(property.DefaultValue);
         }
 
-        @if (Model.Properties.Any(p => "Credentials".Equals(p.Name, StringComparison.OrdinalIgnoreCase) &&
-            "ServiceClientCredentials".Equals(p.Type.Name, StringComparison.OrdinalIgnoreCase)))
-        {
-            @:if (this.Credentials != null) 
-            @:{
-            @:    this.Credentials.InitializeServiceClient(this);
-            @:}
-        }
             SerializationSettings = new JsonSerializerSettings
             {
                 Formatting = Formatting.Indented,
