--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupInterfaceTemplate.cshtml
@@ -12,7 +12,7 @@
 package @(Settings.Namespace.ToLower());
 @EmptyLine
 import com.microsoft.rest.CloudError;
-import com.microsoft.rest.Resource;
+import com.microsoft.rest.BaseResource;
 import com.microsoft.rest.ServiceCallback;
 import com.microsoft.rest.ServiceException;
 import com.microsoft.rest.ServiceResponse;
