--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
@@ -13,7 +13,7 @@ package @(Settings.Namespace.ToLower());
 @EmptyLine
 import com.google.common.reflect.TypeToken;
 import com.microsoft.rest.CloudError;
-import com.microsoft.rest.Resource;
+import com.microsoft.rest.BaseResource;
 import com.microsoft.rest.ServiceCallback;
 import com.microsoft.rest.ServiceException;
 import com.microsoft.rest.ServiceResponse;
