--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
@@ -95,13 +95,20 @@ if(!property.IsReadOnly)
     {
     @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
     }
+    foreach (var exception in method.ExceptionStatements)
+    {
+    @: * @@throws @exception
+    }
     if (method.ReturnType != null)
     {
-    @: * @@return the @method.ReturnTypeString.EscapeXmlComment() object if successful.
+    @: * @@return the @method.ReturnTypeString.EscapeXmlComment() object wrapped in ServiceResponse if successful.
     }
-    @: * @@throws ServiceException the exception wrapped in ServiceException if failed.
+    else
+    {
+    @: * @@return the ServiceResponse object if successful.
+    }
     @: */
-    @:ServiceResponse<@method.GenericReturnTypeString> @(method.Name)(@method.MethodParameterDeclaration) throws ServiceException;
+    @:ServiceResponse<@method.GenericReturnTypeString> @(method.Name)(@method.MethodParameterDeclaration) throws @method.Exceptions;
     @EmptyLine
     @:/**
     if (!String.IsNullOrEmpty(method.Summary))
