Address code analysis issues

--- a/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
@@ -12,7 +12,7 @@
 package @(Settings.Namespace.ToLower()).models;
 @EmptyLine
 
-@foreach (var importClass in Model.Imports)
+@foreach (var importClass in Model.ImportList)
 {
 @:import @importClass;
 }
