Updated NodeJS code generator

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -55,7 +55,7 @@
     throw new Error('callback cannot be null.');
   }
 
-  @if (Model.LogicalParameters.Any())
+  @if (Model.ParameterTemplateModels.Any())
   {
       var validationBlock = Model.ValidationString;
   if (!string.IsNullOrWhiteSpace(validationBlock))
