[finishes #106978618] Add support for custom headers on client level

--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientInterfaceTemplate.cshtml
@@ -28,6 +28,12 @@ public interface @Model.Name {
     String getBaseUri();
 @EmptyLine
     /**
+     * Gets the list of interceptors the OkHttp client will execute.
+     * @@return the list of interceptors.
+     */
+    List<Interceptor> getClientInterceptors();
+@EmptyLine
+    /**
      * Gets the {@@link AzureClient} used for long running operations.
      * @@return the azure client;
      */
