--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -3,96 +3,45 @@
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.ServiceClientTemplateModel>
-/*
-@Header(" * ")
- */
-@EmptyLine
-/* jshint latedef:false */
-/* jshint forin:false */
-/* jshint noempty:false */
-@EmptyLine
-'use strict';
-@EmptyLine
-var util = require('util');
-var msRest = require('ms-rest');
-var ServiceClient = msRest.ServiceClient;
-var WebResource = msRest.WebResource;
-
-@EmptyLine
-@if (Model.ModelTypes.Any())
-{
-@:var models = require('./models');
-}
-@if (Model.MethodGroups.Any())
-{
-@:var operations = require('./operations');
-}
-@EmptyLine
-@{var parameters = Model.Properties.Where(p => p.IsRequired);}
-/**
- * @@class
- * Initializes a new instance of the @Model.Name class.
- * @@constructor
- *
-@foreach (var param in parameters)
-{
-@: * @@param {@param.Type.Name} @param.Name @param.Documentation
-@: *
-}
- * @@param {string} [baseUri] - The base URI of the service.
- *
- * @@param {object} [options] - The parameter options
- *
- * @@param {Array} [options.filters] - Filters to be added to the request pipeline
- *
- * @@param {object} [options.requestOptions] - Options for the underlying request object
- * {@@link https://github.com/request/request#requestoptions-callback Options doc}
- *
- * @@param {bool} [options.noRetryPolicy] - If set to true, turn off default retry policy
- */
-function @(Model.Name)(@(Model.RequiredConstructorParameters), options) {
-@foreach (var param in parameters)
-{
-@:  if (@(param.Name) === null || @(param.Name) === undefined) {
-@:    throw new Error('\'@(param.Name)\' cannot be null.');
-@:  }
-}
-  @EmptyLine
-  if (!options) options = {};
-  @EmptyLine
-  @(Model.Name)['super_'].call(this, @(parameters.Any(p => p.Name == "credentials") ? "credentials" : "null"), options);
-  this.baseUri = baseUri;
-  if (!this.baseUri) {
-    this.baseUri = '@Model.BaseUrl';
-  }
-@foreach (var param in parameters)
-{
-@:  this.@(param.Name) = @(param.Name);
-}
-  @EmptyLine
-  @foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
+from runtime.msrestazure import AzureServiceClient, AzureConfiguration
+@{
+  if (Model.MethodGroupModels.Any())
   {
-  @:if(!this.@(property.Name)) { 
-  @:  this.@(property.Name) = @(property.DefaultValue);
-  @:}
+    foreach (var modelGroupType in Model.MethodGroupModels)
+    {
+@:from .operations.@(modelGroupType.MethodGroupType.ToPythonCase()) import @modelGroupType.MethodGroupType
+    }
   }
-  
+}
+from .models import *
+@EmptyLine
+class @(Model.Name)Configuration(AzureConfiguration):
+@EmptyLine
+    def __init__(self, base_url=None, filepath=None, @(Model.RequiredConstructorParameters)):
+@EmptyLine
+         if (not base_url):
+             base_url = '@Model.BaseUrl'
+@EmptyLine
+        super(@(Model.Name)Configuration, self).__init__(base_url, filepath)
+@EmptyLine
+        self.api_version = '2015-06-01.2.0'
+@EmptyLine
+@EmptyLine
+class @(Model.Name)(AzureServiceClient):
+@EmptyLine
+    def __init__(self, credentials, config=AzureConfiguration()):
+@EmptyLine
+        super(@(Model.Name), self).__init__(credentials, config)
+@EmptyLine
   @foreach (var methodGroup in Model.MethodGroupModels)
   {
-  @:this.@(methodGroup.MethodGroupName) = new operations.@(methodGroup.MethodGroupType)(this);
+        @:self.@(methodGroup.MethodGroupName) = @(methodGroup.MethodGroupType)(self, config)
   }
-  
-  @if (Model.ModelTypes.Any())
+@EmptyLine
+  @foreach (var method in Model.MethodTemplateModels)
   {
-  @:this._models = models;
-  }
-}
-@EmptyLine
-util.inherits(@Model.Name, ServiceClient);
-@foreach (var method in Model.MethodTemplateModels)
-{
-@EmptyLine
 @:@(Include(new MethodTemplate(), method))
-}
 @EmptyLine
-module.exports = @Model.Name;
+  @:
+  }
+
