--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -25,7 +25,7 @@
   if (!string.IsNullOrWhiteSpace(validationBlock))
   {
 @:        # Validate
-@(validationBlock)
+@:        @(validationBlock)
 @EmptyLine
   }
 }
